--- a/前端/掘金.md
+++ b/前端/掘金.md
@@ -1,3 +1,3 @@
 # 掘金优秀专栏搜集
-- <a href="https://juejin.im/user/56a34361816dfa005925a654/posts">shanyue</a> ：前端，后端，devops
+- <a href="https://juejin.im/user/56a34361816dfa005925a654/posts">shanyue</a> ：**前端**，后端，devops
 - 
